# AndroidLearningOnGithub

./: README.md  build.gradle  config.gradle  dependencies.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
bluetoothlearning/: build.gradle
bluetoothlearning/src/main/: AndroidManifest.xml
buglytinkertest2/: build.gradle  proguard-rules.pro  test  tinker-support.gradle
buglytinkertest2/src/main/: AndroidManifest.xml
eventbuslearning/: build.gradle
eventbuslearning/src/main/: AndroidManifest.xml
ipc_messenger_client/: build.gradle
ipc_messenger_client/src/main/: AndroidManifest.xml
ipc_messenger_server/: build.gradle
ipc_messenger_server/src/main/: AndroidManifest.xml
ipclearning/: build.gradle
ipclearning/src/main/: AndroidManifest.xml
mvplearning/: build.gradle
mvplearning/src/main/: AndroidManifest.xml
navigationviewlearning/: build.gradle
navigationviewlearning/src/main/: AndroidManifest.xml
ndklearning/: build.gradle
ndklearning/src/main/: AndroidManifest.xml
ndklearning/src/main/cpp/: CMakeLists.txt  mylib_c.cpp
ndklearning/src/main/cpp/mylib_a/: CMakeLists.txt  mylib_a.cpp  mymath.cpp  mymath.h
ndklearning/src/main/cpp/mylib_b/: mylib_b.cpp
notificationlearning/: build.gradle
notificationlearning/src/main/: AndroidManifest.xml
threadlearning/: build.gradle
threadlearning/src/main/: AndroidManifest.xml
viewevent/: build.gradle
viewevent/src/main/: AndroidManifest.xml
windowandwindowmanager/: build.gradle
windowandwindowmanager/src/main/: AndroidManifest.xml
(+134 files in other folders)
